--- a/Aula004/ex003.html
+++ b/Aula004/ex003.html
@@ -16,7 +16,7 @@
         var n1 = Number.parseInt(window.prompt('Digite um numero: '))
         var n2 = Number.parseInt(window.prompt('Digite outro numero: '))
         var soma = n1 + n2
-        window.alert('A soma dos valores é: ' + soma) // concatenação
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${soma}`) // concatenação
             // (number + number) adição
             // (string + string) concatenação
     </script>
